--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="qtySection" style="position: relative;">
-      <input type="text" id="QTY" onchange="setTotal()" required placeholder=" " autocomplete="off">
+      <input type="number" id="QTY" onchange="setTotal()" required placeholder=" " autocomplete="off">
       <label id="label" for="QTY">QTY</label>
     </div>
     <button id="openDialog" title="Add the custom Quantity">+</button>
