--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <option value="LASSI">LASSI</option>
         <option value="DESI GHEE">DESI GHEE</option>
         <option value="COW DESI GHEE">COW DESI GHEE</option>
+        <option value="LIFAFA">LIFAFA</option>
+        <option value="RABBAD">RABBAD</option>
       </select>
       <label id="label" for="item">Item</label>
     </div>
